validation des redirection dans le compte profil

--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -35,7 +35,7 @@
 									class="text-center">
 									<!-- Product name-->
 									<h5 class="fw-bolder">
-										<a href="{{ path('property_show', {'id': bien.id}) }}" role="button">{{bien.title}}</a>
+										<a href="{{ path('property_show', {'id': bien.id}) }}">{{bien.title}}</a>
 									</h5>
 									<!-- Product reviews-->
 									<div class="d-flex justify-content-center small text-warning mb-2">
