--- a/templates/member/new.html.twig
+++ b/templates/member/new.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 	<h1>Creer un nouveau Bien</h1>
 
-	{{ include('property/_form.html.twig') }}
+	{{ include('member/_form.html.twig') }}
 
 	<a href="{{ path('property_index') }}">Retour à la liste</a>
 {% endblock %}
