--- a/templates/member/_list.html.twig
+++ b/templates/member/_list.html.twig
@@ -1,15 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Les Property
+{% block title %}Sabbah annonce
 {% endblock %}
 
 {% block body %}
+
 	{% for message in app.flashes('success') %}
 		<div class="alert alert-success" role="alert">{{ message }}</div>
 	{% endfor %}
+
 	<h1>Annonces immobilieres : Toute la France</h1>
 
-	<a href="{{ path('property_new') }}">Creer un nouveau bien</a>
+	<a href="{{ path('property_new', {'id': app.user.id}) }}">Creer un nouveau bien</a>
 	<section class="py-5">
 		<div class="container px-2 px-lg-2 mt-2">
 			<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -18,18 +20,20 @@
 					<div class="col mb-5">
 						<div
 							class="card h-100">
+
 							<!-- Sale badge-->
 							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
 							<!-- Product image  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" -->
-
-
+							{% set count = 0 %}
 							{% for image in bien.images %}
-
-								<div>
-									<img class="card-img-top" src="{{ asset('/uploads/' ~ image.name) }}" alt="Image" width="150">
-
-								</div>
+								{% set count = count + 1 %}
+								{% 	if  count == 1 %}
+									<div>
+										<img class="card-img-top" src="{{ asset('/uploads/' ~ image.name) }}" alt="Image" width="150">
+									</div>
+								{% endif %}
 							{% endfor %}
+							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; left: 0.5rem">{{count}}</div>
 							<div class="card-body p-4">
 								<div
 									class="text-center">
@@ -58,11 +62,10 @@
 							</div>
 						</div>
 					</div>
-				{% else %}
-					<span class="text-muted text-decoration-line-through">aucun enregistrement trouver</span>
-
 				{% endfor %}
 			</div>
 		</div>
 	</section>
+
+
 {% endblock %}
