--- a/templates/member/edit.html.twig
+++ b/templates/member/edit.html.twig
@@ -6,9 +6,9 @@
 {% block body %}
 	<h1>Modifier un bien</h1>
 
-	{{ include('property/_form.html.twig', {'button_label': 'Modifier'}) }}
+	{{ include('member/_form.html.twig', {'button_label': 'Modifier'}) }}
 
 	<a href="{{ path('property_index') }}">Retour à la liste</a>
 
-	{{ include('property/_delete_form.html.twig') }}
+	{{ include('member/_delete_form.html.twig') }}
 {% endblock %}
