--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -50,7 +50,7 @@
 		<a href="{{ path('property_edit', {'id': bien.id}) }}">Modifer</a>
 	</div>
 	<div class="text-left">
-		{{ include('property/_delete_form.html.twig') }}
+		{{ include('member/_delete_form.html.twig') }}
 	</div>
 
 {% endblock %}
