--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -43,7 +43,7 @@
 		</div>
 	</div>
 	<div class="text-center">
-		<a href="{{ path('property_index') }}">Retour à la liste
+		<a href="{{ path('app_property_list', {'id': app.user.id}) }}">Retour à la liste
 		</a>
 	</div>
 	<div class="text-left">
