--- a/templates/member/edit.html.twig
+++ b/templates/member/edit.html.twig
@@ -8,7 +8,7 @@
 
 	{{ include('member/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-	<a href="{{ path('property_index') }}">Retour à la liste</a>
+	<a href="{{ path('app_property_list', {'id': app.user.id}) }}">Retour à la liste</a>
 
 	{{ include('member/_delete_form.html.twig') }}
 {% endblock %}
