--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -11,6 +11,8 @@
 			<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
 				{%  for bien in property %}
+
+
 					<div class="col mb-5">
 						<div
 							class="card h-100">
@@ -20,39 +22,42 @@
 							<!-- Product image  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" -->
 							{% set count = 0 %}
 							{% for image in bien.images %}
+
 								{% set count = count + 1 %}
 								{% 	if  count == 1 %}
 									<div>
 										<img class="card-img-top" src="{{ asset('/uploads/' ~ image.name) }}" alt="Image" width="150">
 									</div>
 								{% endif %}
+
+
 							{% endfor %}
 							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; left: 0.5rem">{{count}}</div>
 							<div class="card-body p-4">
 								<div
 									class="text-center">
 									<!-- Product name-->
-									{{ dump(bien.id) }}
+
 									<h5 class="fw-bolder">
 										<a href="{{ path('property_show_guest', {'id': bien.id}) }}">{{bien.title}}</a>
 									</h5>
-									<!-- Product reviews-->
-									<div class="d-flex justify-content-center small text-warning mb-2">
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-									</div>
-									<!-- Product price-->
-									<span class="text-muted text-decoration-line-through">$20.00</span>
-									$18.00
-								</div>
-							</div>
-							<!-- Product actions-->
-							<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-								<div class="text-center">
-									<a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+									<h5 class="fw-bolder">
+										<span>{{bien.price}}
+											euro
+										</span>
+									</h5>
+									<h5 class="fw-bolder">
+										<span>{{bien.city}}
+										</span>
+
+
+									</h5>
+
+									<h5 class="fw-bolder">
+										creer:
+										<span>{{bien.createdAt | date }}
+										</span>
+									</h5>
 								</div>
 							</div>
 						</div>
@@ -61,6 +66,4 @@
 			</div>
 		</div>
 	</section>
-
-
 {% endblock %}
