--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -47,6 +47,8 @@
 										</span>
 									</h5>
 									<h5 class="fw-bolder">
+										<span>{{bien.postcode}}
+										</span>
 										<span>{{bien.city}}
 										</span>
 
