--- a/templates/annonce/show.html.twig
+++ b/templates/annonce/show.html.twig
@@ -48,6 +48,22 @@
 	</div>
 	<div class="text-left">
 		<a href="{{ path('home_annonce') }}">contacter l'annonceur</a>
+		<div id="contactForm" class="mt-4">
+			{{ form_start(form) }}
+			<div class="row">
+				<div class="col">{{ form_row(form.firstname) }}</div>
+				<div class="col">{{ form_row(form.lastname) }}</div>
+			</div>
+			<div class="row">
+				<div class="col">{{ form_row(form.phone) }}</div>
+				<div class="col">{{ form_row(form.email) }}</div>
+			</div>
+			{{ form_rest(form) }}
+			<div class="form-group">
+				<button class="btn btn-primary">Envoyer</button>
+			</div>
+			{{ form_end(form) }}
+		</div>
 	</div>
 
 
