--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -14,7 +14,7 @@
 			</tr>
 			<tr>
 				<th>Description</th>
-				<td>{{ bien.description | u.truncate(350, "...") | raw }}</td>
+				<td>{{ bien.description |  u.truncate(150, '...') | raw  }}</td>
 			</tr>
 		</tbody>
 	</table>
