--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,25 +6,21 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
+		<!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+       
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+		<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+		<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																and uncomment the following Encore helpers to start using Symfony UX #}
+		and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-			<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
-			<link rel="stylesheet" href="{{ asset('js/scripts.js') }}">
-
 		{% endblock %}
-
-		{% block javascripts %}
-			{#{{ encore_entry_script_tags('app') }}#}
-			<script src="{{ asset('js/images.js') }}"></script>
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-		{% endblock %}
-
+		{% block javascripts %}{% endblock %}
 		<style>
 			/* Make the image fully responsive */
 			.carousel-inner img {
@@ -38,9 +34,20 @@
 		{% include "shared/_nav.html.twig" %}
 		{% include "shared/_header.html.twig" %}
 
-		<div class="container my-2"> {% block body %}{% endblock %}
-			</div>
-
+		<div class="container my-2"> 
+		{% block body %}{% endblock %}
+		</div>
+			
 			{% include "shared/_footer.html.twig" %}
+
+		 <!-- Bootstrap core JS-->
+      	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+      	  <!-- Core theme JS-->
+       	    <script src="{{ asset('clean/js/scripts.js') }}"></script>
+			<script src="{{ asset('js/bootstrap.min.js') }}"></script>
+			<script src="{{ asset('js/images.js') }}"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 		</body>
 	</html>
