--- a/templates/admin/sbadmin.html.twig
+++ b/templates/admin/sbadmin.html.twig
@@ -76,7 +76,7 @@
 								<div class="sb-nav-link-icon">
 									<i class="fas fa-chart-area"></i>
 								</div>
-								Catégories
+								Type bien
 							</a>
 							<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
 								<div class="sb-nav-link-icon">
