--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -4,19 +4,13 @@
 {% endblock %}
 
 {% block body %}
-
-
 	<section class="py-5">
 		<div class="container px-2 px-lg-2 mt-2">
 			<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-
 				{%  for bien in property %}
-
-
 					<div class="col mb-5">
 						<div
 							class="card h-100">
-
 							<!-- Sale badge-->
 							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
 							<!-- Product image  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" -->
@@ -29,7 +23,6 @@
 										<img class="card-img-top" src="{{ asset('/uploads/' ~ image.name) }}" alt="Image" width="150">
 									</div>
 								{% endif %}
-
 
 							{% endfor %}
 							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; left: 0.5rem">{{count}}</div>
@@ -51,13 +44,9 @@
 										</span>
 										<span>{{bien.city}}
 										</span>
-
-
 									</h5>
-
 									<h5 class="fw-bolder">
-										creer:
-										<span>{{bien.createdAt | ago }}
+												<span>{{bien.createdAt | ago }}
 										</span>
 									</h5>
 								</div>
@@ -66,6 +55,9 @@
 					</div>
 				{% endfor %}
 			</div>
+			<div class="navigation">
+    {{ knp_pagination_render(property) }}
+	</div>
 		</div>
 	</section>
 {% endblock %}
