--- a/templates/shared/_nav.html.twig
+++ b/templates/shared/_nav.html.twig
@@ -33,15 +33,12 @@
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
 						</li>
-
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_property_list', {'id': app.user.id}) }}" role="button">Mes biens</a>
+							<a class="nav-link" href="{{ path('app_property_list', {'id': app.user.id}) }}" role="button">Mon compte</a>
 						</li>
-
 					{% endif %}
 				</ul>
 			</div>
-
 		</div>
 	</div>
 </nav>
