creation the phone variable to form

--- a/templates/member/_index.html.twig
+++ b/templates/member/_index.html.twig
@@ -9,21 +9,18 @@
 		<div class="alert alert-success" role="alert">{{ message }}</div>
 	{% endfor %}
 
-	<h1>Annonces immobilieres : Toute la France</h1>
+	<h1>Mes Annonces
+	</h1>
 
-	<a href="{{ path('property_new', {'id': app.user.id}) }}">Creer un nouveau bien</a>
+	<a href="{{ path('property_new', {'id': app.user.id}) }}">Deposer une annonce
+	</a>
 	<section class="py-5">
 		<div class="container px-2 px-lg-2 mt-2">
 			<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
 				{%  for bien in propertys %}
 					<div class="col mb-5">
-						<div
-							class="card h-100">
-
-							<!-- Sale badge-->
-							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-							<!-- Product image  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" -->
+						<div class="card h-100">
 							{% set count = 0 %}
 							{% for image in bien.images %}
 								{% set count = count + 1 %}
@@ -35,29 +32,16 @@
 							{% endfor %}
 							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; left: 0.5rem">{{count}}</div>
 							<div class="card-body p-4">
-								<div
-									class="text-center">
-									<!-- Product name-->
+								<div class="text-center">
 									<h5 class="fw-bolder">
 										<a href="{{ path('property_show', {'id': bien.id}) }}" role="button">{{bien.title}}</a>
 									</h5>
-									<!-- Product reviews-->
-									<div class="d-flex justify-content-center small text-warning mb-2">
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-										<div class="bi-star-fill"></div>
-									</div>
-									<!-- Product price-->
-									<span class="text-muted text-decoration-line-through">$20.00</span>
-									$18.00
-								</div>
-							</div>
-							<!-- Product actions-->
-							<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-								<div class="text-center">
-									<a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+									<h5 class="fw-bolder">
+										<p>{{bien.description}}</p>
+									</h5>
+									<h5 class="fw-bolder">
+										<p>{{bien.adress}}</p>
+									</h5>
 								</div>
 							</div>
 						</div>
@@ -66,6 +50,4 @@
 			</div>
 		</div>
 	</section>
-
-
 {% endblock %}
