--- a/templates/member/new.html.twig
+++ b/templates/member/new.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Creer un nouveau Bien</h1>
+	<h1>Creer un nouveau bien</h1>
 
 	{{ include('member/_form.html.twig') }}
 
