--- a/templates/shared/_header.html.twig
+++ b/templates/shared/_header.html.twig
@@ -1,9 +1,8 @@
 <header class="bg-dark py-5">
-	<div class="container px-4 px-lg-5 my-5">
+	<div class="container px-4 px-lg-5 my-3">
 		<div class="text-center text-white">
-			<img src="{{ asset('img/headerimages.jpg') }}" with="300">
-
-			<p class="lead fw-normal text-white-50 mb-2">With this shop hompeage template</p>
+			<img src="{{ asset('img/headerimages.jpg') }}" width="1300">
+			<p class="lead fw-normal text-white-50 mb-2">Welcome to sabbah annonce</p>
 		</div>
 	</div>
 </header>
