--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -31,9 +31,8 @@
 			</tr>
 			<tr>
 				<th>Type de bien</th>
-
-				<td>{{ dump(bien) }}</td>
-
+				<td>{{ bien.propertytype.name }}</td>
+				
 
 			</tr>
 			<tr>
