--- a/templates/member/_delete_form.html.twig
+++ b/templates/member/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <div class="text-left">
-	<form method="post" action="{{ path('property_delete', {'id': bien.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+	<form method="post" action="{{ path('property_delete', {'id': bien.id}) }}" onsubmit="return confirm('Etes vous sûr de supprimer ce champ ?');">
 		<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ bien.id) }}">
 		<button class="btn">Supprimer</button>
 	</form>
