--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,14 @@
 <h1>Hi! Please confirm your email!</h1>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+	SVP confirmez votre adresse mail en cliquant ce sur ce lien:
+	<br><br>
+	<a href="{{ signedUrl }}">Confirmez mon email
+	</a>
+	Ce lien expire dans :
+	{{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
-    Cheers!
+	Monsieur , Madame  !
 </p>
