--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password
+{% block title %}Réinitialisation de votre mot de passe
 {% endblock %}
 
 {% block body %}
-	<h1>Reset your password</h1>
+	<h1>Réinitialisation de votre mot de passe</h1>
 
 	{{ form_start(resetForm) }}
 	{{ form_row(resetForm.plainPassword) }}
-	<button class="btn btn-primary">Reunitialiser le mot de passe</button>
+	<button class="btn btn-primary">Réinitialisation de votre mot de passe</button>
 	{{ form_end(resetForm) }}
 {% endblock %}
