--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Loggin
+{% block title %}Connexion
 {% endblock %}
 
 {% block body %}
@@ -13,11 +13,11 @@
 			<div class="mb-3">
 				vous etes connecté ave l'email:
 				{{ app.user.username }},
-				<a href="{{ path('app_logout') }}">Logout</a>
+				<a href="{{ path('app_logout') }}">Se déconnecter</a>
 			</div>
 		{% endif %}
 
-		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+		<h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
 		<label for="inputEmail">Email</label>
 		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 		<label for="inputPassword">Password</label>
@@ -29,7 +29,7 @@
 		<div class="checkbox mb-3">
 			<label>
 				<input type="checkbox" name="_remember_me">
-				Remember me
+				Souviens-toi
 			</label>
 		</div>
 
