--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -110,12 +110,11 @@ btdelete.addEventListener("click", function () {
 document.querySelector(".modal-footer a").href = `/admin/property/delete/${
 this.dataset.id
 }`
-document.querySelector(".modal-body").innerText = `Etes-vous sûr de vouloir supprimer l'article "${
+document.querySelector(".modal-body").innerText = `Etes-vous sûr de vouloir supprimer l'annonce "${
 this.dataset.title
 }"`
 })
 }
-
 }
 	</script>
 {% endblock %}
