--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -5,26 +5,26 @@
 
 {% block body %}
 
- <div class="jumbotron">
-    <div class="container">
-      {{ form_start(form) }}
-      <div class="form-row align-items-end">
-        <div class="col">
-          {{ form_row(form.minSurface) }}
-        </div>
-        <div class="col">
-          {{ form_row(form.maxPrice) }}
-        </div>
-        
-        <div class="col">
-          <div class="form-group">
-            <button class="btn btn-primary">Rechercher</button>
-          </div>
-        </div>
-      </div>
-      {{ form_end(form) }}
-    </div>
- </div>
+	<div class="jumbotron">
+		<div class="container">
+			{{ form_start(form) }}
+			<div class="form-row align-items-end">
+				<div class="col">
+					{{ form_row(form.minSurface) }}
+				</div>
+				<div class="col">
+					{{ form_row(form.maxPrice) }}
+				</div>
+
+				<div class="col">
+					<div class="form-group">
+						<button class="btn btn-primary">Rechercher</button>
+					</div>
+				</div>
+			</div>
+			{{ form_end(form) }}
+		</div>
+	</div>
 	<section class="py-5">
 		<div class="container px-2 px-lg-2 mt-2">
 			<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -33,7 +33,14 @@
 						<div
 							class="card h-100">
 							<!-- Sale badge-->
-							<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+							{% if bien.sold == true %}
+								<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Disponible</div>
+
+							{% endif %}
+							{% if bien.sold == false %}
+								<div class="badge bg-danger text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Urgent</div>
+
+							{% endif %}
 							<!-- Product image  src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" -->
 							{% set count = 0 %}
 							{% for image in bien.images %}
@@ -67,7 +74,7 @@
 										</span>
 									</h5>
 									<h5 class="fw-bolder">
-												<span>{{bien.createdAt | ago }}
+										<span>{{bien.createdAt | ago }}
 										</span>
 									</h5>
 								</div>
@@ -77,8 +84,7 @@
 				{% endfor %}
 			</div>
 			<div class="navigation">
-    			{{ knp_pagination_render(property) }}
+				{{ knp_pagination_render(property) }}
 			</div>
-		</div
-	</section>
-{% endblock %}
+		</div</section>
+	{% endblock %}
