--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body style="background: radial-gradient( circle farthest-corner at 10% 20%,  rgba(97,186,255,1) 0%, rgba(166,239,253,1) 90.1% );">
 
 		{% include "shared/_nav.html.twig" %}
 		{% include "shared/_header.html.twig" %}
