--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion
+{% block title %}Connection
 {% endblock %}
 
 {% block body %}
@@ -35,7 +35,7 @@
 
 
 		<button class="btn btn-lg btn-primary" type="submit">
-			Sign in
+			Connection
 		</button>
 		<p>
 			<a href="{{path('app_forgot_password_request')}}">Mot de passe oublié</a>
