--- a/templates/shared/_footer.html.twig
+++ b/templates/shared/_footer.html.twig
@@ -1,5 +1,14 @@
-<footer class="py-5 bg-dark">
-	<div class="container">
-		<p class="m-0 text-center text-white">Copyright &copy; Sabbah 2021</p>
-	</div>
+<style>
+	footer {
+
+		background-size: 100% 100%;
+		background-color: black;
+		margin-bottom: 0;
+	}
+</style>
+
+<footer>
+
+	<p class="m-0 text-center text-white">Copyright &copy; Sabbah 2021</p>
+
 </footer>
