--- a/templates/shared/_header.html.twig
+++ b/templates/shared/_header.html.twig
@@ -1,8 +1,22 @@
+<style>
+	header {
+		background-image: url("{{ asset('img/headerimages.jpg') }}");
+		background-size: 100% 100%;
+		height: 500px;
+	}
+	.slogan {
+		color: white;
+		text-shadow: 2px 2px 4px #000000;
+		font-size: xx-large;
+
+	}
+</style>
+
 <header class="bg-dark py-5">
 	<div class="container px-4 px-lg-5 my-3">
 		<div class="text-center text-white">
-			<img src="{{ asset('img/headerimages.jpg') }}" width="1000">
-			<p class="lead fw-normal text-white-50 mb-2">Welcome to sabbah annonce</p>
+
+			<p class="slogan">Welcome to sabbah annonce</p>
 		</div>
 	</div>
 </header>
