modification setverified a true

--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'admin/sbadmin.html.twig' %}
 
-{% block title %}Hello AdminController!
+{% block title %}
+	Dashboard !
 {% endblock %}
 
 {% block body %}
