password login en claire

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,9 +18,9 @@
 		{% endif %}
 
 		<h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
-		<label for="inputEmail">Email</label>
+		<label for="inputEmail">Email/demo@demo.fr</label>
 		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de Passe
+		<label for="inputPassword">Mot de Passe/123456
 		</label>
 		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
